@@ -14,7 +14,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.hibernate.Criteria;
 import org.hibernate.SessionFactory;
 import org.hibernate.criterion.DetachedCriteria;
@@ -345,7 +345,7 @@ public class HibernateLocationDAO implements LocationDAO {
 		    Projections.rowCount()).add(Restrictions.eqProperty("alias.locationId", "outer.locationId"));
 		
 		return sessionFactory.getCurrentSession().createCriteria(Location.class, "outer").add(
-		    Restrictions.eq("retired", false)).add(Subqueries.eq(new Long(tags.size()), numberOfMatchingTags)).list();
+		    Restrictions.eq("retired", false)).add(Subqueries.eq(Long.valueOf(tags.size()), numberOfMatchingTags)).list();
 	}
 	
 	/**
@@ -355,7 +355,7 @@ public class HibernateLocationDAO implements LocationDAO {
 	 * @return
 	 */
 	private List<Integer> getLocationTagIds(List<LocationTag> tags) {
-		List<Integer> locationTagIds = new ArrayList<Integer>();
+		List<Integer> locationTagIds = new ArrayList<>();
 		for (LocationTag tag : tags) {
 			locationTagIds.add(tag.getLocationTagId());
 		}
